# VideoNarrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  recorder-overlay.html  recorder.html  spec.MD  vite.config.ts  vitest.config.ts
.claude/commands/: create-pr.md  release.md
.claude/skills/rust-audit/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-website.yml  pr-quality-gate.yml  release.yml
e2e/: configuration.spec.ts  error-handling.spec.ts  export-screen.spec.ts  project-setup.spec.ts  review-screen.spec.ts  settings-panel.spec.ts  smoke.spec.ts  tauri-mock.ts  wizard-navigation.spec.ts
scripts/: cli_perf_report.md  cli_perf_suite.sh  fetch-ffmpeg.sh
skills/narrator/: SKILL.md
skills/narrator/references/: envelope.md  install.md  subcommands.md
skills/narrator/scripts/: doctor.sh
src/: App.tsx  main.tsx  recorder-main.tsx  recorder-overlay.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README.md  ffmpeg-aarch64-apple-darwin  ffprobe-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  azure_tts_client.rs  builtin_tts.rs  commands.rs  doc_processor.rs  elevenlabs_client.rs  error.rs  export_engine.rs  ffmpeg_progress.rs  http_client.rs  lib.rs  main.rs  menu.rs  models.rs  process_utils.rs  project_store.rs  render.rs  screen_recorder.rs  script_validator.rs  secure_store.rs  speech_rate.rs  telemetry.rs  tts_pack.rs  video_edit.rs  video_engine.rs
src-tauri/src/cli/: mod.rs  probe_cmd.rs  render_cmd.rs  tts_cmd.rs
src-tauri/src/compositor/: audio.rs  decoder.rs  encoder.rs  keyframe.rs  mod.rs
src-tauri/src/compositor/effects/: blur.rs  fade.rs  mod.rs  spotlight.rs  text.rs  zoom_pan.rs
src-tauri/styles/: critique.toml  executive.toml  product_demo.toml  teaser.toml  technical.toml  training.toml
src-tauri/tests/: cli_e2e.rs
src/__tests__/: Configuration.test.tsx  ErrorBoundary.test.tsx  Export.test.tsx  MenuEvents.test.tsx  Processing.test.tsx  ProjectLibrary.test.tsx  ReviewEdit.test.tsx  Settings.test.tsx  Telemetry.test.tsx  UIComponents.test.tsx  UpdateChecker.test.tsx  WizardLayout.test.tsx  addMedia.test.ts  analytics.test.ts  buildEditPlan.test.ts  e2e-flows.test.tsx  edit-clips-safety.test.ts  errorMessages.test.ts  formatters.test.ts  frameBudget.test.ts  freeze-zoompan.test.ts  new-features.test.ts  processing-state.test.ts  project-loading.test.tsx  script-operations.test.ts  setup.ts  trackError.test.ts  validation.test.ts
src/__tests__/stores/: configStore-safety.test.ts  editStore.test.ts  editStoreMultiSource.test.ts  projectStore.test.ts  wizardStore.test.ts
src/components/: ErrorBoundary.tsx  NarratorLogo.tsx  UpdateChecker.tsx
src/components/layout/: AppMenuBar.tsx  WizardLayout.tsx
src/components/ui/: Button.tsx  Card.tsx  ConfirmDialog.tsx  ErrorCard.tsx  ProgressBar.tsx  Toast.tsx
src/contexts/: SettingsContext.tsx
src/features/configuration/: ConfigurationScreen.tsx
src/features/edit-video/: EditVideoScreen.tsx  EffectInspector.tsx  EffectsOverlay.tsx  NumericInput.tsx  ZoomPanOverlay.tsx  addMedia.ts  easing.test.ts  easing.ts  usePlaybackEngine.ts
src/features/export/: ExportScreen.tsx  subtitlePresets.test.ts  subtitlePresets.ts
src/features/help/: AboutDialog.tsx  FeedbackPanel.tsx  HelpPanel.tsx
src/features/legal/: PrivacyPolicy.tsx  TermsOfService.tsx
src/features/processing/: ProcessingScreen.tsx
src/hooks/: useWizardNavigation.ts
src/lib/: buildEditPlan.ts  constants.ts  editPlanHash.test.ts  editPlanHash.ts  errorMessages.ts  formatters.test.ts  formatters.ts  frameBudget.ts  inputLimits.ts  speechRate.test.ts  speechRate.ts  theme.ts  validation.test.ts  validation.ts  version.ts
src/lib/tauri/: events.ts  (+1 more)
src/stores/: configStore.test.ts  configStore.ts  editStore.ts  exportStore.test.ts  exportStore.ts  processingStore.test.ts  processingStore.ts  projectStore.ts  scriptStore.test.ts  scriptStore.ts
src/styles/: globals.css
src/types/: config.ts  export.ts  processing.ts  project.ts  script.ts
website/: index.html  package.json  tsconfig.json  vite.config.ts
(+15 files in other folders)
