[package]
name = "narrator"
version = "0.5.0"
description = "AI-powered video narration generator"
authors = ["you"]
edition = "2021"

[lib]
name = "narrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
base64 = "0.22"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
tempfile = "3"
blake3 = "1"
rayon = "1.10"
directories = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
