[package]
name = "narrator"
version = "0.8.2"
description = "AI-powered video narration generator"
authors = ["you"]
edition = "2021"
# Declaring `[[bin]]` entries (added in Phase 2 for the CLI) disables Cargo's
# implicit default binary selection. `tauri dev` invokes `cargo run` without
# --bin, so it needs this to pick the GUI binary by default.
default-run = "narrator"

[lib]
name = "narrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "narrator"
path = "src/main.rs"

# Headless CLI exposing the same render / probe / project / AI / TTS
# capabilities as the GUI. Used for E2E testing and (future) coding-agent
# automation. Build with `cargo build --bin narrator-cli`.
[[bin]]
name = "narrator-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
base64 = "0.22"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
tempfile = "3"
blake3 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1.10"
directories = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
clap = { version = "4", features = ["derive"] }
# Compositor: pure-Rust 2D rendering for the in-process effects pipeline.
tiny-skia = "0.11"
# Glyph rasterization for the text overlay effect.
ab_glyph = "0.2"
# Pure-Rust WAV I/O for the in-process audio mixer (Phase 5).
hound = "3.5"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
